elk/elasticsearch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: elasticsearch
  name: elasticsearch
spec:
  replicas: 0
  selector:
    matchLabels:
      io.kompose.service: elasticsearch
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/elk.net: "true"
        io.kompose.service: elasticsearch
    spec:
      containers:
        - env:
            - name: ES_JAVA_OPTS
              value: -Xms1000m -Xmx1000m
            - name: bootstrap.memory_lock
              value: "true"
            - name: cluster.name
              value: docker-cluster
            - name: discovery.type
              value: single-node
            - name: xpack.monitoring.enabled
              value: "false"
            - name: xpack.security.enabled
              value: "false"
          image: docker.elastic.co/elasticsearch/elasticsearch:6.8.3
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
                - curl
                - -f
                - http://localhost:9200
            failureThreshold: 10
            periodSeconds: 10
            timeoutSeconds: 10
          name: elasticsearch
          ports:
            - containerPort: 9200
          resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
      nodeSelector:
        kubernetes.io/hostname: ubuntu01
status: {}
