elk/kibana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  labels:
    io.kompose.service: kibana
  name: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kibana
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/elk.net: "true"
        io.kompose.service: kibana
    spec:
      containers:
        - image: docker.elastic.co/kibana/kibana:7.9.2
          imagePullPolicy: "Always"
          name: kibana
          ports:
            - containerPort: 5601
          resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      nodeSelector:
        kubernetes.io/hostname: ubuntu04
status: {}
