elk/logstash-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: logstash
  name: logstash
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: logstash
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      labels:
        io.kompose.network/elk.net: "true"
        io.kompose.service: logstash
    spec:
      containers:
        - args:
            - logstash
            - -f
            - /config-dir/custom.conf
          image: docker.elastic.co/logstash/logstash:7.9.2
          imagePullPolicy: ""
          name: logstash
          ports:
            - containerPort: 5044
            - containerPort: 8989
          resources: {}
          volumeMounts:
            - mountPath: /usr/share/logstash/config/logstash.yml
              name: logstash-pv-claim
              subPath: logstash.yml
              readOnly: true
            - mountPath: /config-dir
              name: logstash-pv-claim
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
        - name: logstash-pv-claim
          persistentVolumeClaim:
            claimName: logstash-pv-claim
      nodeSelector:
        kubernetes.io/hostname: ubuntu04
status: {}
