elk/elk-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: elk.net
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/elk.net: "true"
  podSelector:
    matchLabels:
      io.kompose.network/elk.net: "true"
